<resources>
    <string name="app_name">Assignment</string>
    <string name="order">ORDER</string>
    <string name="edittext">Edittext</string>
    <string name="name">Name</string>
    <string name="_1">1</string>

    <string name="donuts_are_glazed_and_sprinkled_with_candy">Donuts are glazed and sprinkled with candy</string>
    <string name="froyo_is_premium_self_serve_frozen_yogurt">FroYo is premium self-serve frozen yogurt</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="minus2">Minus2</string>
    <string name="plus1">Plus1</string>
    <string name="plus2">Plus2</string>
    <string name="minus1">Minus1</string>
    <string name="froyo">Froyo</string>
    <string name="doughnut">Doughnut</string>
    <string name="_2">2</string>
    <string name="r10">R10</string>
    <string name="r12">R12</string>
    <string name="total">Total</string>

</resources>
